css/modules/article-image-hover.css
.main__images-first-news-first-image-text-hover,
.main__images-first-news-second-image-text-hover,
.main__images-first-news-third-image-text-hover,
.main__images-first-news-fourth-image-text-hover,
.main__images-first-news-sixth-image-text-hover,
.main__images-first-news-seventh-image-text-hover,
.main__images-first-news-eighth-image-text-hover {
	display: none;
	margin: 1rem 10vw 0 1rem;
}

.main__images-first-news-fourth-image-text-hover {
	margin-right: 5vw;
}

/* Remove commented line if the text, on the first picture, is not going to be on one line */
.image__text-width {
	/* width: 50%; */
}

.image__text-paragraph {
	font-size: var(--body-text-size);
	color: var(--white);
}

.image__text-h2 {
	font-family: var(--primary-font-family);
	font-size: var(--large-text-size);
	color: var(--white);
}

.main__images-first-news-first-image:hover .main__images-first-news-first-image-hover-black,
.main__images-first-news-second-image:hover .main__images-first-news-second-image-hover-black,
.main__images-first-news-third-image:hover .main__images-first-news-third-image-hover-black,
.main__images-first-news-fourth-image:hover .main__images-first-news-fourth-image-hover-black, 
.main__images-second-news-sixth-image:hover .main__images-first-news-sixth-image-hover-black, 
.main__images-second-news-seventh-image:hover .main__images-first-news-seventh-image-hover-black, 
.main__images-second-news-eighth-image:hover .main__images-first-news-eighth-image-hover-black {
	z-index: 3;
	display: block;
}

.main__images-first-news-first-image:hover .main__images-first-news-first-image-text-hover,
.main__images-first-news-second-image:hover .main__images-first-news-second-image-text-hover, 
.main__images-first-news-third-image:hover .main__images-first-news-third-image-text-hover,
.main__images-first-news-fourth-image:hover .main__images-first-news-fourth-image-text-hover,
.main__images-second-news-sixth-image:hover .main__images-first-news-sixth-image-text-hover,
.main__images-second-news-seventh-image:hover .main__images-first-news-seventh-image-text-hover,
.main__images-second-news-eighth-image:hover .main__images-first-news-eighth-image-text-hover {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 4;
}

